--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^7.0.12",
+    "path": "^0.12.7",
     "pg": "^8.16.3"
   },
   "devDependencies": {
