--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^7.0.12",
     "path": "^0.12.7",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
