--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,13 @@
 FROM node:18-alpine
 
 WORKDIR /app
+
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
 
-EXPOSE 3000
+EXPOSE 8000
 
-CMD ['npm', 'run', 'dev']
+CMD ['npm', 'start']
