--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "nodemailer": "^7.0.12",
     "path": "^0.12.7",
     "pg": "^8.16.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
