--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,18 @@
-FROM node:18-alpine
+FROM node:20-alpine
+
+RUN addgroup app && adduser -S -G app app
 
 WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm i
 
 COPY . .
+
+RUN chown app:app /app
+
+USER app
 
 EXPOSE 8000
 
