--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,18 @@
-FROM node:18-alpine
+FROM node:20-alpine
+
+RUN addgroup app && adduser -S -G app app
 
 WORKDIR /app
+
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
+
+RUN chown -R app:app /app
+
+USER app
 
 EXPOSE 3000
 
